# lighteval

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  auto_commit_fixes.sh  build_backend.py  custom_yourbench_task.py  launch_file.sh  lighteval.py  lighteval_cli.py  pyproject.toml  run_evals_accelerate.py  run_evals_nanotron.py  setup.py  sglang_output.txt  sglang_sampling_para.txt  simple_truthfulqa_judge.py  test_maime_simple.sh  testmlevals.yml  tmp.txt  view_maime_results.ipynb  vllm_inputs_token.txt  vllm_output.txt  vllm_sampling_para.txt
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  evaluation-task-request.md  feature-request.md
.github/workflows/: build_main_documentation.yml  build_pr_documentation.yml  doc-build.yml  doc-pr-build.yml  doc-pr-upload.yml  latest_tests.yaml  pr_style_bot.yaml  quality.yaml  slow_tests.yaml  tests.yaml  trufflehog.yml  vllm_main_tests.yaml
community_tasks/: .greek_evals.py.swp  _template.py  aimo_evals.py  arabic_evals.py  chart_qa_evals.py  custom_task_classification_grammar_task.py  filbench_evals.py  filipino_evals.py  french_evals.py  ger_rag_eval.py  german_rag_evals.py  greek_evals.py  jglue_evals.py  oz_evals.py  serbian_eval.py  slr_bench_evals.py  slr_bench_requirements.txt  swiss_legal_evals.py  turkic_evals.py  uncontaminated_xps.py  verbal_reasoning_challenge.py
community_tasks/ifeval_el_helpers/: ifeval_el_instructions.py  ifeval_el_instructions_registry.py
docs/source/: Adding-a-Custom-Task.md  Available-Tasks.md  Contributing-to-multilingual-evaluations.md  Evaluate-the-model-on-a-server-or-container.md  Home.md  Quicktour.md  _Sidebar.md  _toctree.yml  adding-a-custom-task.mdx  adding-a-new-metric.mdx  adding_new_metric.md  adding_new_task.md  available-tasks.mdx  caching.mdx  contributing-to-multilingual-evaluations.mdx  evaluate-the-model-on-a-server-or-container.mdx  evaluating-a-custom-model.mdx  index.md  index.mdx  inspect-ai.mdx  installation.md  installation.mdx  metric-list.mdx  metric_list.md  offline-evaluation.md  quicktour.md  quicktour.mdx  saving-and-reading-results.mdx  saving_results.md  tasks.md  use-huggingface-inference-endpoints-or-tgi-as-backend.mdx  use-inference-providers-as-backend.mdx  use-litellm-as-backend.mdx  use-sglang-as-backend.mdx  use-vllm-as-backend.mdx  use_python_api.md  use_tgi.md  use_vllm.md  using-the-python-api.mdx
examples/: custom_tasks_tests.py  lighteval_config_override_nanotron_tests.yaml  test_tasks.txt
examples/custom_models/: google-translate-requirements-freeze.txt  google_translate_model.py  local_mt_model.py  rag_model_example.py  seamless4mt_model.py
examples/custom_tasks_templates/: custom_rail_score_task.py  custom_task_classification_grammar_task.py  custom_yourbench_task.py  custom_yourbench_task_from_files.py  custom_yourbench_task_mcq.py
examples/model_configs/: base_model.yaml  endpoint_model.yaml  endpoint_model_lite.yaml  endpoint_model_reuse_existing.yaml  huggingface_inference_endpoints.yaml  huggingface_tgi_model.yaml  inference_providers.yaml  litellm_model.yaml  openai_model.yaml  peft_model.yaml  quantized_model.yaml  serverless_model.yaml  serverless_model_with_openai.yaml  sglang_model_config.yaml  test.yaml  tgi_model.yaml  transformers_model.yaml  transformers_vlm_model.yaml  vllm_model_config.yaml
examples/nanotron/: custom_evaluation_tasks.py  custom_task.py  hynek_task.py  lighteval_config_override_template.yaml
examples/slurm/: multi_node_vllm.slurm  multi_node_vllm_serve.slurm
examples/tasks/: OALL_tasks.txt  OALL_v1_tasks.txt  OALL_v2_tasks.txt  all_arabic_tasks.txt  all_filipino_tasks.txt  all_ger_rag_eval_tasks.txt  all_german_rag_evals.txt  all_tasks.txt  bbh.txt  extended_eval_greek_tasks.txt  instruct_multilingual.txt  instruct_multilingual_test.txt  open_llm_leaderboard_tasks.txt  recommended_set.txt  test_arabic.txt
examples_config/models/: base_model.yaml
extended_tasks/: requirements.txt
extended_tasks/ifeval/: instructions.py  instructions_registry.py  main.py
extended_tasks/mt_bench/: judges.py  main.py  model_adapter.py  mt_bench.py
extended_tasks/tiny_benchmarks/: main.py
filbench/: global_mmlu.py
src/: main.py  main_brrr.py
src/lighteval/: __init__.py  __main__.py  __main_typer__.py  cli_args.py  data.py  evaluator.py  few_shot_manager.py  from_hub.py  main_accelerate.py  main_baseline.py  main_custom.py  main_endpoint.py  main_inspect.py  main_nanotron.py  main_sglang.py  main_tasks.py  main_vllm.py  parsers.py  pipeline.py  utils.py  utils_parallelism.py
tasks_examples/: AlGhafa_tasks.txt  OALL_tasks.txt  OALL_tasks_test  OALL_tasks_test.txt  all_arabic_tasks.txt  all_tasks.txt  all_tasks_500.txt  bbh.txt  custom_evaluation_tasks.py  harness_mmlu_tasks.txt  lighteval_config_override_template.yaml  open_llm_leaderboard_tasks.txt  original_mmlu_tasks.txt  recommended_set.txt  tasks_to_look_at.txt  tested_harness_tasks.txt
tasks_examples/custom_tasks/: custom_evaluation_tasks.py  custom_evaluation_utils.py  custom_task.py  lighteval_config_override_template.yaml
tests/: __init__.py  conftest.py  fixtures.py  test_answer_extractor.py  test_base_model.py  test_dependencies.py  test_endpoint_model.py  test_main.py  test_main_nanotron.py  test_prompt_manager.py  test_prompt_manager_class.py  test_reproduction.py  test_test.py  test_unit_base_metrics.py  test_unit_harness_metrics.py  test_unit_harness_prompts.py  test_unit_reorder.py  utils.py
tests/config/: README.md  lighteval_config_override_custom.yaml
tests/logging/: test_evaluation_tracker.py
tests/metrics/: test_extractive_match.py  test_math_eval.py  test_metric_requests.py  test_multilingual_metrics.py  test_normalizations.py
tests/models/: test_abstract_mode.py  test_abstract_model.py  test_base_model.py  test_endpoint_model.py  test_model_input.py  test_model_utils.py  test_transformers_model.py
tests/pipeline/: test_reasoning_tags.py
tests/reference_scores/: Qwen2.5-VL-3B-Instruct-results-vlm.json  Qwen2.5-VL-7B-Instruct-results-vlm.json  harness_metrics.json  (+8 more)
(+934 files in other folders)
